# SOFIE

./: .gitignore  CMakeLists.txt  Linear_16.hxx  README.md  setup.sh
src/: CMakeLists.txt
src/SOFIE_core/: CMakeLists.txt  README.md
src/SOFIE_core/inc/: LinkDef.h
src/SOFIE_core/inc/SOFIE/: FunctionList.hxx  OperatorList.hxx  RFunction.hxx  RFunction_MLP.hxx  RFunction_Mean.hxx  RFunction_Sum.hxx  RModel.hxx  RModel_Base.hxx  RModel_GNN.hxx  RModel_GraphIndependent.hxx  ROperator.hxx  ROperator_BasicBinary.hxx  ROperator_BasicNary.hxx  ROperator_BasicUnary.hxx  ROperator_BatchNormalization.hxx  ROperator_Cast.hxx  ROperator_Comparision.hxx  ROperator_Concat.hxx  ROperator_Constant.hxx  ROperator_Conv.hxx  ROperator_ConvTranspose.hxx  ROperator_ConvTranspose.icc  ROperator_Custom.hxx  ROperator_Einsum.hxx  ROperator_Elu.hxx  ROperator_Erf.hxx  ROperator_Expand.hxx  ROperator_EyeLike.hxx  ROperator_GRU.hxx  ROperator_GRU.icc  ROperator_Gather.hxx  ROperator_Gemm.hxx  ROperator_Identity.hxx  ROperator_LSTM.hxx  ROperator_LSTM.icc  ROperator_LayerNormalization.hxx  ROperator_LeakyRelu.hxx  ROperator_Pad.hxx  ROperator_Pool.hxx  ROperator_RNN.hxx  (+22 more)
src/SOFIE_core/src/: Prototype.cxx  RFunction.cxx  RFunction_MLP.cxx  RFunction_Mean.cxx  RFunction_Sum.cxx  RModel.cxx  RModel_Base.cxx  RModel_GNN.cxx  RModel_GraphIndependent.cxx  SOFIE_common.cxx
src/SOFIE_core/test/: CMakeLists.txt  EmitFromONNX.cxx.in  EmitFromRoot.cxx.in  TestCustomModelsFromONNX.cxx  TestSofieModels.cxx
src/SOFIE_core/test/GNN/: EmitGNN.cxx  EmitGraphIndependent.cxx
src/SOFIE_parsers/: CMakeLists.txt
src/SOFIE_parsers/inc/: LinkDef.h
src/SOFIE_parsers/inc/SOFIE/: RModelParser_ONNX.hxx
src/SOFIE_parsers/src/: ParseBasicBinary.cxx  ParseBasicNary.cxx  ParseBasicUnary.cxx  ParseBatchNormalization.cxx  ParseCast.cxx  ParseComparision.cxx  ParseConcat.cxx  ParseConstant.cxx  ParseConv.cxx  ParseConvTranspose.cxx  ParseEinsum.cxx  ParseElu.cxx  ParseErf.cxx  ParseExpand.cxx  ParseEyeLike.cxx  ParseFuseBatchnormRelu.cxx  ParseFuseConvAdd.cxx  ParseFuseConvTransposeAdd.cxx  ParseFuseGemmRelu.cxx  ParseFuseMatMulAdd.cxx  ParseGRU.cxx  ParseGather.cxx  ParseGemm.cxx  ParseIdentity.cxx  ParseIf.cxx  ParseLSTM.cxx  ParseLayerNormalization.cxx  ParseLeakyRelu.cxx  ParseMatMul.cxx  ParsePad.cxx  ParsePool.cxx  ParseRNN.cxx  ParseRandom.cxx  ParseRange.cxx  ParseReduce.cxx  ParseRelu.cxx  ParseReshape.cxx  ParseScatterElements.cxx  ParseSelu.cxx  ParseShape.cxx  (+10 more)
